Changed color scheme

--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -1,8 +1,9 @@
 // Variables
+// brand-primary was originally set to #fed136
 
-@brand-primary: #fed136;
+@brand-primary: #3c3;
 @brand-danger: #e74c3c;
-@gray-darkest: #222;
+@gray-darkest: #248f24;
 @gray: #777;
 @gray-lighter: #f7f7f7;
-@placeholder-text: #bbbbbb;
+@placeholder-text: #155215;
