--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
             <div class="intro-text">
                 <!-- <div class="intro-lead-in">Welcome To Our Studio!</div> -->
                 <div class="intro-heading">How's it going?</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#services" class="page-scroll btn btn-xl">Not Bad!</a>
             </div>
         </div>
     </header>
@@ -98,7 +98,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-check fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Learning</h4>
                     <p class="text-muted">I can't stress how imporant it is these days to have an ambition for education. I'm always willing to learn new things on my own time and will go out of my way to make sure I am up to date with the latest and most elegant technology.</p>
@@ -114,7 +114,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-gears fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Active Engagement</h4>
                     <p class="text-muted">Learning is one thing, but you start to make real progress when you can apply what you've learned to hands-on activites. Because of this, I am always involved in a few projects of my own. Making projects with the material you have learned is a great way to show and further develop your skill set.</p>
@@ -308,13 +308,42 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
+                    <h2 class="section-heading">Contact Me</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
             <div class="row">
                 
+                <div class="col-lg-12">
+                    <form name="sentMessage" id="contactForm" novalidate="" class="">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required="" data-validation-required-message="Please enter your name." aria-invalid="false">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required="" data-validation-required-message="Please enter your email address." aria-invalid="false">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <textarea class="form-control" placeholder="Message *" id="message" required="" data-validation-required-message="Please enter a message." aria-invalid="false"></textarea>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="col-lg-12 text-center">
+                                <div id="success"></div>
+                                <button type="submit" class="btn btn-xl">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
+
         </div>
     </section>
 
@@ -391,12 +420,11 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Heading</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                            <h2>Basic Chat</h2>
+                            <p class="item-intro text-muted">Portable chat messaging</p>
                             <img class="img-responsive img-centered" src="static/img/portfolio/startup-framework-preview.png" alt="">
-                            <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
-                            <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <p>Basic Chat is a small project making good use of Node.js and MongoDB. It allows the user to send instant messages to other users that are logged in. The site also tracks analytics for each user that can be viewed on their profile. More features are coming soon!</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Okay, Cool!</button>
                         </div>
                     </div>
                 </div>
@@ -418,8 +446,8 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                            <h2>Scopium</h2>
+                            <p class="item-intro text-muted">Award Winning iOS Application</p>
                             <img class="img-responsive img-centered" src="static/img/portfolio/treehouse-preview.png" alt="">
                             <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
                             <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
