--- a/static/less/agency.less
+++ b/static/less/agency.less
@@ -421,6 +421,7 @@ section {
 }
 
 @media(min-width:768px) {
+
 	.timeline {
 		&:before {
 			left: 50%;
@@ -633,7 +634,8 @@ ul.social-buttons {
 
 .portfolio-modal {
 	.modal-content {
-	    border-radius: 0;
+	    border-radius: 10%;
+	    // used to be 0
 	    background-clip: border-box;
 	    -webkit-box-shadow: none;
 	    box-shadow: none;
@@ -725,4 +727,24 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: @brand-primary;
+}
+
+// About Me Section
+
+.about-pic {
+	img {
+		border: 10px ridge @brand-primary;
+		box-shadow: 20px 20px 15px #888;
+	}
+	
+}
+
+.about-bio {
+	p {
+		font-size: 2rem;
+		text-align: justify;
+		padding-left: 50px;
+		padding-right: 50px;
+	}
+	
 }
