--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -3,7 +3,8 @@
 
 @brand-primary: #3c3;
 @brand-danger: #e74c3c;
-@gray-darkest: #248f24;
-@gray: #777;
+@brand-background: #c0efc0;
+@brand-secondary: #248f24;
+@gray: #414141;
 @gray-lighter: #f7f7f7;
 @placeholder-text: #155215;
