--- a/static/less/agency.less
+++ b/static/less/agency.less
@@ -777,6 +777,7 @@ body {
 .about-skills {
 	div {
 		&:hover {
+			cursor: pointer;
 			border-radius: 10%;
 			box-shadow: 20px 20px 50px #888;
 			-webkit-transition: all ease 0.7s;
