--- a/templates/index.html
+++ b/templates/index.html
@@ -130,7 +130,7 @@
                 </div>
             </div>
             <div class="row text-center about-skills">
-                <div class="col-md-4">
+                <div id="skill1" class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
@@ -138,7 +138,7 @@
                     <h4 class="service-heading">Learning</h4>
                     <p class="text-muted">I can't stress how imporant it is these days to have an ambition for education. I'm always willing to learn new things on my own time and will go out of my way to make sure I am up to date with the latest and most elegant technology.</p>
                 </div>
-                <div class="col-md-4">
+                <div id="skill2" class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
@@ -146,7 +146,7 @@
                     <h4 class="service-heading">Technology</h4>
                     <p class="text-muted">From calculators to iPhones to computers and beyond, working with technology is and has always been one of my biggest fortes. I am always trying to find the simpleist and most efficient ways to tackle any problems that I may encounter.</p>
                 </div>
-                <div class="col-md-4">
+                <div id="skill3" class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-gears fa-stack-1x fa-inverse"></i>
@@ -167,7 +167,7 @@
                     <h3 class="section-subheading text-muted">Just a few of my projects</h3>
                 </div>
             </div>
-            <div class="row">
+            <div class="row slicker">
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -175,7 +175,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="static/img/txtadvice.png" class="img-responsive" alt="">
+                        <img src="static/img/txtadvice_tight.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>TxtAdvice</h4>
@@ -189,7 +189,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="static/img/basicchat.png" class="img-responsive" alt="">
+                        <img src="static/img/basicchat_tight.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Basic Chat</h4>
@@ -436,6 +436,12 @@
 
     <!-- Waypoints Plugin -->
     <script src="static/js/noframework.waypoints.min.js"></script>
+    
+    <!-- Slick Plugin -->
+    <script src="static/js/slick.min.js"></script>
+
+    <!-- Swapsies Plugin -->
+    <script src="static/js/jquery-swapsies.js"></script>
 
     <!-- Custom Waypoints -->
     <script src="static/js/custom_waypoints.js"></script>
