--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,9 +15,15 @@
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <!-- Animate CSS -->
     <link href="static/css/animate.min.css" rel="stylesheet">
+
+    <!-- Slick CSS -->
+    <link href="static/css/slick.css" rel="stylesheet">
+    <link href="static/css/slick-theme.css" rel="stylesheet">
     <!-- <link href="static/css/animsition.min.css" rel="stylesheet"> -->
     <!-- Custom CSS -->
     <link href="static/css/agency.css" rel="stylesheet">
+
+
 
     <!-- Custom Fonts -->
     <link href="static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
