--- a/templates/index.html
+++ b/templates/index.html
@@ -445,6 +445,9 @@
     <!-- Slick Plugin -->
     <script src="static/js/slick.min.js"></script>
 
+    <!-- SweetAlert Plugin -->
+    <script src="static/js/sweetalert.min.js"></script>
+
     <!-- Swapsies Plugin -->
     <script src="static/js/jquery-swapsies.js"></script>
 
