--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,10 @@
     <!-- Slick CSS -->
     <link href="static/css/slick.css" rel="stylesheet">
     <link href="static/css/slick-theme.css" rel="stylesheet">
-    <!-- <link href="static/css/animsition.min.css" rel="stylesheet"> -->
+    
+    <!-- SweetAlert CSS -->
+    <link href="static/css/sweetalert.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link href="static/css/agency.css" rel="stylesheet">
 
