--- a/static/less/mixins.less
+++ b/static/less/mixins.less
@@ -53,12 +53,12 @@
 	font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.script-font() {
-	font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
+.ubuntu-font() {
+	font-family: "Ubuntu", "Helvetica Neue", Helvetica, Arial, cursive;
 }
 
 .body-font() {
-	font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: Nobile, "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .heading-font() {
