--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -1,10 +1,10 @@
 // Variables
 // brand-primary was originally set to #fed136
 
-@brand-primary: #3c3;
+@brand-primary: #36c;//#3c3;
 @brand-danger: #e74c3c;
-@brand-background: #c0efc0;
-@brand-secondary: #248f24;
+@brand-background: #39f;//#c0efc0;
+@brand-secondary: #339;//#248f24;
 @gray: #414141;
 @gray-lighter: #f7f7f7;
 @placeholder-text: #155215;
