--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,10 @@
 
     <title>{% block title %}Jesse Bartola{% endblock %}</title>
 
+    <!-- Ubuntu Font CSS -->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
+    <!-- Nobile Font CSS -->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nobile" />
     <!-- Bootstrap Core CSS -->
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <!-- Animate CSS -->
